--- a/app.json
+++ b/app.json
@@ -1,4 +1,5 @@
 {
+  
   "expo": {
     "name": "react-native-getuk",
     "slug": "react-native-getuk",
@@ -14,13 +15,19 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "assets": [
+      "./assets/icon.png",
+      "./assets/splash.png",
+      "./assets/adaptive-icon.png"
+    ],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#ffffff",
+        "permissions": ["CAMERA", "READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE"]
       }
     },
     "web": {
