--- a/app.json
+++ b/app.json
@@ -1,8 +1,9 @@
 {
   "expo": {
-    "name": "react-native-getuk",
-    "slug": "react-native-getuk",
+    "name": "Getukan",
+    "slug": "getukan",
     "version": "1.0.0",
+    "description": "Melihat toko getuk disekitar anda",
     "orientation": "portrait",
     "icon": "./assets/logogetuk.png",
     "userInterfaceStyle": "light",
@@ -14,18 +15,27 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "assets": [
-      "./assets/logogetuk.png"
-    ],
     "ios": {
+      "bundleIdentifier": "com.sleepy4k.getukan",
+      "buildNumber": "1.0.0",
       "supportsTablet": true
     },
     "android": {
+      "package": "com.sleepy4k.getukan",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/logogetuk.png",
-        "backgroundColor": "#ffffff",
-        "permissions": ["CAMERA", "READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE"]
-      }
+        "backgroundColor": "#ffffff"
+      },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.FOREGROUND_SERVICE",
+        "android.permission.MANAGE_DOCUMENTS",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.CAMERA"
+      ]
     },
     "web": {
       "favicon": "./assets/logogetuk.png"
@@ -36,7 +46,18 @@
         {
           "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your client."
+        }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "7b1518c4-a747-4ce7-93f3-38fd294d4ec8"
+      }
+    }
   }
 }
