--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "doctor": "expo-doctor",
+    "build": "eas build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -15,9 +17,9 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.14",
-    "@types/react": "~18.2.14",
     "expo": "~49.0.15",
     "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
     "prop-types": "^15.8.1",
@@ -27,13 +29,12 @@
     "react-native-image-crop-picker": "^0.40.1",
     "react-native-image-picker": "^7.0.2",
     "react-native-vector-icons": "^10.0.2",
-    "react-navigation": "^5.0.0",
-    "expo-location": "~16.1.0"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react-native": "^0.72.6",
     "babel-plugin-module-resolver": "^5.0.0",
+    "expo-doctor": "^1.1.3",
     "typescript": "^5.2.2"
   },
   "private": true
