--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "babel-plugin-module-resolver": "^5.0.0",
-    "expo-doctor": "^1.1.3",
-    "typescript": "^5.2.2"
+    "expo-doctor": "^1.1.3"
   },
   "private": true
 }
