--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.14",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-image-crop-picker": "^0.40.1",
     "react-native-image-picker": "^7.0.2",
     "react-native-vector-icons": "^10.0.2",
-    "react-navigation": "^5.0.0",
-    "expo-image-picker": "~14.3.2"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
