--- a/package.json
+++ b/package.json
@@ -1,38 +1,55 @@
 {
-  "name": "react-native-getuk",
+  "name": "getukan",
   "version": "1.0.0",
+  "description": "React Native mobile app for getukan project",
   "main": "node_modules/expo/AppEntry.js",
+  "private": true,
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --clear",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "doctor": "expo-doctor",
-    "build": "eas build"
+    "doctor": "expo-doctor"
   },
+  "author": "Benjamin4k",
+  "keywords": [
+    "adjex",
+    "react",
+    "react-native"
+  ],
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sleepy4k/react-native-getuk.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Sleepy4k/react-native-getuk/issues"
+  },
+  "homepage": "https://github.com/Sleepy4k/react-native-getuk#readme",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-navigation/native": "^6.1.9",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.14",
-    "expo": "~49.0.15",
-    "expo-image-picker": "~14.3.2",
-    "expo-location": "~16.1.0",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~47.0.12",
+    "expo-image-picker": "~14.0.2",
+    "expo-splash-screen": "^0.17.5",
+    "expo-status-bar": "~1.4.2",
     "firebase": "^10.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-image-crop-picker": "^0.40.1",
-    "react-native-image-picker": "^7.0.2",
-    "react-native-vector-icons": "^10.0.2",
-    "react-navigation": "^5.0.0"
+    "prop-types": "^15.8.1",
+    "react": "18.1.0",
+    "react-native": "0.70.8",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.12.9",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo-doctor": "^1.1.3"
-  },
-  "private": true
+  }
 }
