--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
   },
   "homepage": "https://github.com/Sleepy4k/react-native-getuk#readme",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.14",
+    "dotenv": "^16.3.1",
     "expo": "~47.0.12",
+    "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
@@ -47,8 +48,7 @@
     "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0"
+    "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
