--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
     "web": "expo start --web",
     "tunnel": "expo start --tunnel",
     "clear": "expo start --clear",
-    "doctor": "expo-doctor"
+    "doctor": "expo-doctor",
+    "env:init": "copy example.native.js data.native.js && copy app.json app.json.bak",
+    "env:push": "node ./build/index.js",
+    "env:pop": "copy app.json.bak app.json && del app.json.bak && del data.native.js",
+    "env:dump": "copy data.native.js dump.native.js",
+    "build": "eas build"
   },
-  "author": "Benjamin4k",
+  "author": "benjamin4k",
   "keywords": [
-    "adjex",
+    "expo",
+    "getuk",
     "react",
+    "getukan",
     "react-native"
   ],
   "license": "ISC",
@@ -35,9 +42,7 @@
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.14",
-    "dotenv": "^16.3.1",
     "expo": "~47.0.12",
-    "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
@@ -48,7 +53,8 @@
     "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "expo-constants": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
