--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "expo-network": "~5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "expo-doctor": "^1.1.3"
   }
 }
