--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "getukan",
-  "version": "1.0.0",
+  "version": "4.0.0",
   "description": "React Native mobile app for getukan project",
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
@@ -11,6 +11,7 @@
     "web": "expo start --web",
     "tunnel": "expo start --tunnel",
     "clear": "expo start --clear",
+    "localhost": "expo start --localhost",
     "doctor": "expo-doctor",
     "env:init": "copy example.native.js data.native.js && copy app.json app.json.bak",
     "env:push": "node ./build/index.js",
@@ -47,6 +48,7 @@
     "expo": "~47.0.12",
     "expo-constants": "~14.0.2",
     "expo-image-picker": "~14.0.2",
+    "expo-network": "~5.0.0",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^10.6.0",
@@ -59,7 +61,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
-    "expo-network": "~5.0.0"
+    "react-native-view-slider": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
